# index-gh-pages

./: .gitignore  ARCHITECTURE.md  MANIFEST.in  create-venv.py  dev-requirements.txt  generate_mkdocs_yml.py  generate_project_config.py  generate_setup_files.py  mkdocs.yml  project_config.json  project_config_template.json  pyproject.toml  requirements.txt  summary_tree.txt
index_gh_pages/: builder.py  cli.py  core.py  mkdocs.yml
