[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "index-gh-pages"
version = "0.1.6"
description = "CLI tool to convert README.md to index.md and build MkDocs documentation."
authors = [{ name="Tamer Hamad Faour", email="info@denkengewinnen.com" }]
requires-python = ">=3.8"
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-macros-plugin"
]

[project.scripts]
indexgh = "index_gh_pages.cli:main"